--- a/main.css
+++ b/main.css
@@ -82,7 +82,13 @@ table.tbl TH {
 
 div.std {
     background: inherit;
-    height: 0px;
+    /**height: 0px;*/
+}
+
+.main {
+    background: #ddd;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 select, textarea, input[type="text"], input[type="password"],
