--- a/main.css
+++ b/main.css
@@ -32,6 +32,14 @@ body {
     margin-right: 5px;
 }
 
+.crumb-right select {
+    height: 25px;
+}
+
+.crumb-right input[type="text"] {
+    height: 15px;
+}
+
 .alert {
     margin-left: auto;
     margin-right: auto;
