--- a/bootstrap/main.css
+++ b/bootstrap/main.css
@@ -20,6 +20,7 @@ body {
 }
 
 .nav-tabs > li > a, .nav-pills > li > a {
+    font-size: 10pt;
     line-height: 14px;
     margin-right: 2px;
     padding-left: 6px;
@@ -242,6 +243,15 @@ table.mocal .event {
     width: 16em;
 }
 
+.list select {
+    height: 1.5em;
+    width: 10em;
+}
+
+input[type="submit"].btn.btn-small {
+    border-radius: 15px;
+}
+
 table.well {
     margin-bottom: 0px;
 }
@@ -257,6 +267,10 @@ select[name="task_type"] {
 
 .crumb-right select {
     width: 100px;
+}
+
+.crumb-right li select, .crumb-right li input {
+    width: 10em;
 }
 
 .contact-info {
@@ -311,7 +325,7 @@ label[for="email_project_contacts"], label[for="email_log_user"] {
 
 /* -------------------- Customisations --------------------- */
 
-* { font-size: 14px; }
+* { font-size: 13px; }
 a.brand { position: relative; left: 10px; }
 body > table { width: 95%; margin: 0px auto; }
 
@@ -343,7 +357,7 @@ table.well table tr td:first-child { width: 70%;}
     border-collapse: separate; 
 }
 
-tr, td, input, select, label {	font-size: 14px !important; }
+tr, td, input, select, label {	font-size: 12px !important; }
 table.well table tr td:first-child { width: 70%;}
 table.well tr td input, table.well tr td select { width: 60%; display: inline-block; box-sizing: border-box; }
 
