some more style tweaks

--- a/bootstrap/main.css
+++ b/bootstrap/main.css
@@ -233,6 +233,10 @@ table.mocal td.event {
 table.mocal .event {
 }
 
+.projectdesigner select {
+    height: 1.5em;
+    width: 25em;
+}
 .addedit input[type="text"] {
     height: 1em;
     width: 15em;
@@ -329,7 +333,7 @@ label[for="email_project_contacts"], label[for="email_log_user"] {
 a.brand { position: relative; left: 10px; }
 body > table { width: 95%; margin: 0px auto; }
 
-div.module-nav { margin-bottom: 15px;}
+div.module-nav { margin-bottom: 0px;}
 
 .crumb ul li { background: none; }
 .crumb-right ul li span, .crumb-right ul li div, .crumb ul li span, .crumb ul li div {
